Fixed countrymap tooltip flickering

--- a/frontend/src/Dashboard/CountryMap/Countrymap.scss
+++ b/frontend/src/Dashboard/CountryMap/Countrymap.scss
@@ -84,6 +84,10 @@
 					fill: $color-primary;
 				}
 			}
+
+			&:hover {
+				fill: #A1A4EF;
+			}
 		}
     }
 }
